# GhostFlow-AI

./: BUG_FIX_SUMMARY.md  CHANGES_SUMMARY.md  CRITICAL_FIXES.md  CRITICAL_FIXES_SUMMARY.md  EXECUTIVE_SUMMARY.md  FIXES_APPLIED.md  INDEX.md  INTEGRATION_GUIDE.md  README.md  SESSION_SUMMARY.md  TESTING_CHECKLIST.md  package-lock.json  package.json  test.md
app/: globals.css  page.tsx
app/components/: FloatingHintSidebar.tsx  JuniorDashboard.tsx  LoginScreen.tsx  StarConstellationView.tsx
app/hint-window/: page.tsx
app/services/: geminiClient.ts  sessionStorage.ts
data/: ghostflow_session.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
